Database Architect - Entrust Datacard Careers. CapTech Consulting Data Architect | SmartRecruiters. Computer Consultants International, Inc. Database Architect 4 (Job ID: 603031) | SmartRecruiters. ADARA - Principal Engineer, Data Architect. Business Intelligence Database Architect - Career Page. Spry Squared, Inc. Big Data Architect | SmartRecruiters. Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page. Big Data Architect (Kafka) - Experian Careers. Big Data Architect - Apply ... - Hummingbird Technologies Ltd - Jobs. Capgemini Japan Careers - Big Data Architect (Data Lake Architect). IT Data Domain Architect - Bank of Hawaii Careers. Data Architect, Decision Analytics Services ... - EXL Service | Careers. Medidata Solutions Careers - Senior Enterprise Architect. Sr.Software Engineer-Big Data, Cloud Architecture -21835 #0224 job at Radiant Digital in Temple Terrace, FL, powered by JobScore. Unusual Ventures - Senior Data Warehouse Architect.  Amplifon Careers - Global IT Data Architect. Datatonic - Jobs: Cloud Architect (GCP) - Apply online. Lead Data Architect | Kalos Consulting, Inc.. Hummingbird Technologies Ltd - Jobs: Big Data Architect - Apply .... Verifone Careers - Bigdata Architect. Diverse Lynx LLC Windows Data Center Architect Administrator | SmartRecruiters. Dataiku - Hadoop Architect EMEA. Big Data Technical Architect - Mumbai - Careers. Bmtech group Data Architect | SmartRecruiters. Datastrong Careers - Data Architect. Data Architect (SZ) - Klook - Career Page. Job Application for Data Architecture Engineer at Blue Apron. Sr Data Architect, Cloud in United States, United States | Careers at .... Nortal - Data Architect. ServiceNow Careers - Principal Database Architect. Quast Ltd - Jobs: Data Architect - Apply online. Centare - Data Architect. IT Pros Health Care Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters. Data/Technical Architect-Contingent Worker

--- a/data-architect.html
+++ b/data-architect.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692419671-database-architect-4-job-id-603031-'>Computer Consultants International, Inc. Database Architect 4 (Job ID: 603031) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692419671-database-architect-4-job-id-603031-'>Computer Consultants International, Inc. Database Architect 4 (Job ID: 603031) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://pennfoster.applytojob.com/apply/gGQHZ7e1Wf/Business-Intelligence-Database-Architect'>Business Intelligence Database Architect - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pennfoster.applytojob.com/apply/gGQHZ7e1Wf/Business-Intelligence-Database-Architect'>Business Intelligence Database Architect - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -108,7 +108,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/A770136ECD'>Datatonic - Jobs: Cloud Architect (GCP) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/A770136ECD'>Datatonic - Jobs: Cloud Architect (GCP) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -166,7 +166,7 @@ applications?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1EV9fwt&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nsfwPKwh'>ServiceNow Careers - Principal Database Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1EV9fwt&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nsfwPKwh'>ServiceNow Careers - Principal Database Architect</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
@@ -183,7 +183,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-contingent-worker-21458-bIFBEyQGGr6AfKaKkRyNN8'>Data/Technical Architect-Contingent Worker-21458 #0193 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-contingent-worker-21458-bIFBEyQGGr6AfKaKkRyNN8'>Data/Technical Architect-Contingent Worker-21458 #0193 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -200,7 +200,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -212,7 +212,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/datastrong/job/o2Qzafwl'>Datastrong Careers - Big Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/datastrong/job/o2Qzafwl'>Datastrong Careers - Big Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -250,11 +250,11 @@ best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/fractalindustries/job/oKryafwD'>Fractal Industries Careers - Sr. Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/fractalindustries/job/oKryafwD'>Fractal Industries Careers - Sr. Data Architect</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Owns data design solution and related artifacts of one or more assigned domain. 
 Acts as a data SME for those domains. Responsible for all issues and its?...</p>
@@ -272,7 +272,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999691745433-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999691745433-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -280,7 +280,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-15</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/20LD1S16bs/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/20LD1S16bs/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -322,11 +322,11 @@ class?...</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-12</p>
 <hr/>
-<h5><a href='http://zgfarchitects.applytojob.com/apply/Fg6DnYjGng/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/Fg6DnYjGng/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/ocH1PyAbN4/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
+<h5><a href='http://zgfarchitects.applytojob.com/apply/ocH1PyAbN4/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -452,7 +452,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-06-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/primerevenue/job/ohWv9fwB'>PrimeRevenue Careers - Director, Data Architecture</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/primerevenue/job/ohWv9fwB'>PrimeRevenue Careers - Director, Data Architecture</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
