--- a/ios-developer.html
+++ b/ios-developer.html
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692421356-senior-ios-developer'>Adevinta Senior iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692421356-senior-ios-developer'>Adevinta Senior iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Wien, Austria</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Middle IOS Developer at PMLAB.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/B32FBBAE50'>Intellectsoft - Jobs: Middle/Senior IOS Developer - Apply online</a></h5> 
+<h5><a href='https://intellectsoft.workable.com/j/B32FBBAE50'>Intellectsoft - Jobs: Middle/Senior IOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv Palo Alto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -120,7 +120,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -128,7 +128,7 @@
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/yP40Kh6ioC/IOS-Developer-Multiple-Countries'>iOS Developer- Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/yP40Kh6ioC/IOS-Developer-Multiple-Countries'>iOS Developer- Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -252,7 +252,7 @@ label.</p>
 <p><span class="badge badge-light">Austin, TX Melbourne</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vpTech/357c22fd-fdc3-446e-87c1-0edeaf54f5a1'>vpTech - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/357c22fd-fdc3-446e-87c1-0edeaf54f5a1'>vpTech - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -272,7 +272,7 @@ label.</p>
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1721630'>Job Application for iOS Developer Barcelona at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1721630'>Job Application for iOS Developer Barcelona at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -300,7 +300,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/picsart/cc3b6311-8450-45ad-a814-623abff1cf67'>PicsArt - Senior iOS Developer, Video Team</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/picsart/cc3b6311-8450-45ad-a814-623abff1cf67'>PicsArt - Senior iOS Developer, Video Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -326,7 +326,7 @@ label.</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/DlZm7Ob3go/IOS-Mobile-Developer'>iOS Mobile Developer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/DlZm7Ob3go/IOS-Mobile-Developer'>iOS Mobile Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -372,7 +372,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://nodes.recruitee.com/o/senior-ios-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nodes.recruitee.com/o/senior-ios-developer'>
       Senior iOS Developer - Nodes
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -449,7 +449,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999691219288-ios-developer'>Greppy Systems iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999691219288-ios-developer'>Greppy Systems iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
